--- a/style.css
+++ b/style.css
@@ -24,12 +24,12 @@ body {
   line-height: 20pt;
 }
 
-h1,
+p,
 h2,
 h3 {
   width: 100%;
-  margin-top: 0px;
-  margin-bottom: 10px;
+  margin-top: 15px;
+  margin-bottom: 15px;
   padding: 0;
 }
 
@@ -38,6 +38,10 @@ h1 {
   color: #373fff;
   font-size: 20px;
   line-height: 28px;
+  width: 100%;
+  margin-top: 50px;
+  margin-bottom: 15px;
+  padding: 0;
 }
 
 h2 {
@@ -57,7 +61,7 @@ h4 a {
   color: gray;
   font-style: italic;
   font-weight: normal;
-  font-size: 12pt;
+  font-size: 10pt;
   line-height: 14pt;
 }
 
@@ -67,9 +71,7 @@ a {
 ol,
 ul {
   padding: 0;
-  margin: 0;
-  padding-bottom: 25px;
-  /*   list-style-type: none; */
+  margin: 15px 0px;
 }
 
 ul.bullet {
@@ -130,7 +132,7 @@ li a {
   font-size: 20px;
   line-height: 28px;
   text-align: right;
-  margin-top: 2%;
+  margin-top: 35px;
 }
 
 div#sub-nav ul {
@@ -142,13 +144,18 @@ div#sub-nav ul li a {
   color: black;
 }
 
+div#sub-nav ul li a:hover {
+  text-decoration: underline;
+  color: black;
+}
+
 #main-panel {
   flex: 2.5;
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
   padding-right: 10%;
-  margin-top: 2%;
+  margin: 0;
 }
 
 .date {
@@ -166,7 +173,7 @@ div#sub-nav ul li a {
 .assignment-grid-container {
   display: grid;
   grid-template-columns: auto auto auto;
-  margin-bottom: 3%;
+  margin: 15px 0px;
   padding: 0px;
 }
 .assignment-grid-item {
@@ -179,16 +186,18 @@ div#sub-nav ul li a {
 .rubric-grid-container {
   display: grid;
   grid-template-columns: auto auto auto auto auto;
-  margin: 0;
+  grid-gap: 3px;
+  margin: 30px 0px;
   padding: 0px;
 }
 .rubric-grid-item {
-  border: 1px solid rgba(0, 0, 0, 0.8);
+  border: none;
   margin: 0;
   padding: 10px;
   font-size: 10pt;
   line-height: 12pt;
   text-align: left;
+  box-shadow: 0 0 0 3px #373fff;
 }
 
 .two-grid-container {
@@ -215,8 +224,7 @@ div#sub-nav ul li a {
 }
 
 .btn,
-p.itemPara,
-p {
+p.itemPara {
   padding: 12px 16px;
   margin: 2px;
 }
